# labs-sem-8

./: README.md
analysys/: .gitignore
analysys/clf-1/: clf-1.ipynb  grades-100  grades-60:40-entropy  grades-60:40-gini  grades-70:30-entropy  grades-70:30-gini  grades-80:20-entropy  grades-80:20-gini  grades-90:10-entropy  grades-90:10-gini  grades.csv
analysys/clf-2/: clf-2.ipynb
analysys/clust-1/: clust-1.ipynb  custmers.txt  customers.csv
analysys/clust-2/: clust-2.ipynb  hiring-info.txt
analysys/patt-1/: lab1.ipynb
comp_bez/lab1/: CMakeLists.txt  CertificateGenerator.cpp  CertificateGenerator.h  MainWindow.cpp  MainWindow.h  main.cpp
comp_bez/lab1/ui/: MainWindow.ui
comp_bez/lab2/: Binary.cpp  Binary.h  CMakeLists.txt  Cipher.cpp  Cipher.h  MainWindow.cpp  MainWindow.h  main.cpp
comp_bez/lab2/ui/: MainWindow.ui
gis/: lab1.qgz  lab2.qgz  lab3.qgz  lab4.qgz  lab4_mod.qgz  lab5.qgz  unemployed March 2014.csv  union dataset.csv
gis/boundary_polygon/: boundary_polygon.dbf  boundary_polygon.shp  boundary_polygon.shx
graphics/lab1/: CMakeLists.txt  main.cpp
graphics/lab2/: CMakeLists.txt  main.cpp
graphics/lab3/: CMakeLists.txt  main.cpp
